--- a/app/src/main/res/layout/activity_per_personalinfo.xml
+++ b/app/src/main/res/layout/activity_per_personalinfo.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#DCDCDC"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
     <LinearLayout
         android:id="@+id/upmost"
@@ -12,12 +12,12 @@
         android:layout_alignParentTop="true"
         android:layout_gravity="center_horizontal"
         android:background="#4169E1"
-        android:orientation="vertical" >
+        android:orientation="vertical">
 
         <RelativeLayout
             android:layout_width="fill_parent"
             android:layout_height="40dp"
-            android:gravity="center_horizontal" >
+            android:gravity="center_horizontal">
 
             <FrameLayout
                 android:id="@+id/frameLayout1"
@@ -25,7 +25,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="7dp"
-                android:layout_weight="0" >
+                android:layout_weight="0">
 
                 <ImageButton
                     android:id="@+id/personalinfo_back"
@@ -46,6 +46,23 @@
                 android:text="@string/per_title_personalinfo"
                 android:textColor="#ffffff"
                 android:textSize="16sp" />
+
+            <FrameLayout
+                android:id="@+id/frameLayout2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="7dp"
+                android:layout_weight="0">
+
+                <ProgressBar
+                    android:id="@+id/personalinfo_progressbar"
+                    android:layout_width="30dp"
+                    android:layout_gravity="right"
+                    android:layout_height="30dp"
+                    android:visibility="gone"
+                     />
+            </FrameLayout>
         </RelativeLayout>
     </LinearLayout>
 
@@ -53,20 +70,21 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_below="@id/upmost"
-        android:orientation="vertical" >
+        android:orientation="vertical">
 
         <LinearLayout
             android:id="@+id/group_01"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="6dp"
-            android:orientation="vertical" >
+            android:orientation="vertical">
+
 
             <RelativeLayout
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:background="#FFFFFF"
-                android:gravity="center" >
+                android:gravity="center">
 
                 <View
                     android:layout_width="fill_parent"
@@ -92,7 +110,6 @@
                     android:layout_toRightOf="@id/per_userid"
                     android:background="@android:color/transparent"
                     android:gravity="center"
-                    android:text="20111308016"
                     android:textSize="16sp" />
             </RelativeLayout>
 
@@ -105,7 +122,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:background="#FFFFFF"
-                android:gravity="center" >
+                android:gravity="center">
 
                 <TextView
                     android:id="@+id/per_username"
@@ -126,7 +143,6 @@
                     android:layout_toRightOf="@id/per_username"
                     android:background="@android:color/transparent"
                     android:gravity="center"
-                    android:text="樊亚风"
                     android:textSize="16sp" />
             </RelativeLayout>
 
@@ -139,7 +155,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:background="#FFFFFF"
-                android:gravity="center" >
+                android:gravity="center">
 
                 <TextView
                     android:id="@+id/per_usersex"
@@ -160,7 +176,6 @@
                     android:layout_toRightOf="@id/per_usersex"
                     android:background="@android:color/transparent"
                     android:gravity="center"
-                    android:text="男"
                     android:textSize="16sp" />
             </RelativeLayout>
 
@@ -173,7 +188,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:background="#FFFFFF"
-                android:gravity="center" >
+                android:gravity="center">
 
                 <TextView
                     android:id="@+id/per_usernumber"
@@ -194,7 +209,6 @@
                     android:layout_toRightOf="@id/per_usernumber"
                     android:background="@android:color/transparent"
                     android:gravity="center"
-                    android:text="130528188888888888"
                     android:textSize="16sp" />
             </RelativeLayout>
 
@@ -207,7 +221,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:background="#FFFFFF"
-                android:gravity="center" >
+                android:gravity="center">
 
                 <TextView
                     android:id="@+id/per_usermajor"
@@ -228,7 +242,6 @@
                     android:layout_toRightOf="@id/user_newpassword"
                     android:background="@android:color/transparent"
                     android:gravity="center"
-                    android:text="软件工程"
                     android:textSize="16sp" />
             </RelativeLayout>
 
@@ -241,7 +254,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:background="#FFFFFF"
-                android:gravity="center" >
+                android:gravity="center">
 
                 <TextView
                     android:id="@+id/per_userold"
@@ -262,7 +275,6 @@
                     android:layout_toRightOf="@id/per_userold"
                     android:background="@android:color/transparent"
                     android:gravity="center"
-                    android:text="24"
                     android:textSize="16sp" />
             </RelativeLayout>
 
@@ -275,7 +287,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:background="#FFFFFF"
-                android:gravity="center" >
+                android:gravity="center">
 
                 <TextView
                     android:id="@+id/per_useremail"
@@ -296,7 +308,6 @@
                     android:layout_toRightOf="@id/per_useremail"
                     android:background="@android:color/transparent"
                     android:gravity="center"
-                    android:text="1181631922@qq.com"
                     android:textSize="16sp" />
             </RelativeLayout>
 
@@ -309,7 +320,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:background="#FFFFFF"
-                android:gravity="center" >
+                android:gravity="center">
 
                 <TextView
                     android:id="@+id/per_userphone"
@@ -330,7 +341,6 @@
                     android:layout_toRightOf="@id/per_userphone"
                     android:background="@android:color/transparent"
                     android:gravity="center"
-                    android:text="15530124556"
                     android:textSize="16sp" />
             </RelativeLayout>
 
@@ -338,11 +348,12 @@
                 android:layout_width="fill_parent"
                 android:layout_height="1dp"
                 android:background="#808A87" />
+
             <RelativeLayout
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:background="#FFFFFF"
-                android:gravity="center" >
+                android:gravity="center">
 
                 <TextView
                     android:id="@+id/per_useraddress"
@@ -363,7 +374,6 @@
                     android:layout_toRightOf="@id/per_useraddress"
                     android:background="@android:color/transparent"
                     android:gravity="center"
-                    android:text="男生宿舍楼 6#515"
                     android:textSize="16sp" />
             </RelativeLayout>
 
