--- a/app/src/main/res/layout/fragment_personalcenter.xml
+++ b/app/src/main/res/layout/fragment_personalcenter.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#DCDCDC"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
     <LinearLayout
         android:id="@+id/upmost"
@@ -12,12 +12,12 @@
         android:layout_alignParentTop="true"
         android:layout_gravity="center_horizontal"
         android:background="#4169E1"
-        android:orientation="vertical" >
+        android:orientation="vertical">
 
         <RelativeLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal" >
+            android:gravity="center_horizontal">
 
             <TextView
                 android:id="@+id/title"
@@ -38,14 +38,14 @@
         android:layout_height="fill_parent"
         android:layout_below="@id/upmost"
         android:background="#C0C0C0"
-        android:orientation="vertical" >
+        android:orientation="vertical">
 
         <LinearLayout
             android:id="@+id/group_01"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:background="#FFFFFF"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="fill_parent"
@@ -53,14 +53,22 @@
                 android:background="#C0C0C0"
                 android:gravity="center_horizontal"
                 android:orientation="vertical"
-                android:paddingTop="8dp" >
+                android:paddingTop="8dp">
 
-                <Button
-                    android:id="@+id/user_but"
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
-                    android:background="@drawable/user_img"
-                    android:gravity="center_horizontal" />
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center_horizontal">
+
+                    <Button
+                        android:id="@+id/user_but"
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                        android:text="用户姓名"
+                        android:textSize="15sp"
+                        android:textColor="@color/black"
+                        android:background="@drawable/user_img" />
+                </RelativeLayout>
             </LinearLayout>
 
             <LinearLayout
@@ -68,7 +76,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:orientation="vertical"
-                android:paddingTop="0dp" >
+                android:paddingTop="0dp">
 
                 <View
                     android:layout_width="fill_parent"
@@ -79,7 +87,7 @@
                     android:layout_width="fill_parent"
                     android:layout_height="50dp"
                     android:layout_gravity="center_horizontal"
-                    android:orientation="horizontal" >
+                    android:orientation="horizontal">
 
                     <ImageView
                         android:id="@+id/per_studentid_img"
@@ -112,8 +120,7 @@
                 <LinearLayout
                     android:layout_width="fill_parent"
                     android:layout_height="20dp"
-                    android:background="#C0C0C0" >
-                </LinearLayout>
+                    android:background="#C0C0C0"></LinearLayout>
 
                 <View
                     android:layout_width="fill_parent"
@@ -125,7 +132,7 @@
                     android:layout_width="fill_parent"
                     android:layout_height="45dp"
                     android:layout_gravity="center_horizontal"
-                    android:orientation="horizontal" >
+                    android:orientation="horizontal">
 
                     <ImageView
                         android:id="@+id/per_person_img"
@@ -159,7 +166,7 @@
                     android:layout_width="fill_parent"
                     android:layout_height="45dp"
                     android:layout_gravity="center_horizontal"
-                    android:orientation="horizontal" >
+                    android:orientation="horizontal">
 
                     <ImageView
                         android:id="@+id/per_password_img"
@@ -193,7 +200,7 @@
                     android:layout_width="fill_parent"
                     android:layout_height="45dp"
                     android:layout_gravity="center_horizontal"
-                    android:orientation="horizontal" >
+                    android:orientation="horizontal">
 
                     <ImageView
                         android:id="@+id/per_schedule_img"
@@ -216,26 +223,29 @@
                         android:textColor="#000000"
                         android:textSize="16sp" />
                 </LinearLayout>
+
                 <View
                     android:layout_width="fill_parent"
                     android:layout_height="1px"
                     android:layout_marginLeft="0dp"
                     android:background="#808A87" />
+
                 <LinearLayout
                     android:layout_width="fill_parent"
                     android:layout_height="20dp"
-                    android:background="#C0C0C0" >
-                </LinearLayout>
+                    android:background="#C0C0C0"></LinearLayout>
+
                 <View
                     android:layout_width="fill_parent"
                     android:layout_height="1px"
                     android:layout_marginLeft="0dp"
                     android:background="#808A87" />
+
                 <LinearLayout
                     android:layout_width="fill_parent"
                     android:layout_height="45dp"
                     android:layout_gravity="center_horizontal"
-                    android:orientation="horizontal" >
+                    android:orientation="horizontal">
 
                     <ImageView
                         android:id="@+id/per_about_img"
@@ -269,27 +279,28 @@
             <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="20dp"
-                android:background="#C0C0C0" >
-            </LinearLayout>
+                android:background="#C0C0C0"></LinearLayout>
+
             <View
                 android:layout_width="fill_parent"
                 android:layout_height="1px"
                 android:layout_marginLeft="0dp"
                 android:background="#808A87" />
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="45dp"
-            android:background="#C0C0C0"
-             >
-            <Button
+
+            <LinearLayout
                 android:layout_width="fill_parent"
-                android:layout_height="40dp"
-                android:layout_below="@+id/textview02"
-                android:layout_marginTop="7.0px"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:background="@drawable/login_selector"
-                android:text="@string/loginOut"/>
+                android:layout_height="45dp"
+                android:background="#C0C0C0">
+
+                <Button
+                    android:layout_width="fill_parent"
+                    android:layout_height="40dp"
+                    android:layout_below="@+id/textview02"
+                    android:layout_marginTop="7.0px"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:background="@drawable/login_selector"
+                    android:text="@string/loginOut" />
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
