--- a/app/src/main/res/layout/activity_per_changepassword.xml
+++ b/app/src/main/res/layout/activity_per_changepassword.xml
@@ -85,14 +85,14 @@
                     android:textSize="16sp" />
 
                 <EditText
-                    android:id="@+id/username"
+                    android:id="@+id/old_password"
                     android:layout_width="fill_parent"
                     android:layout_height="40dp"
                     android:layout_marginLeft="20dp"
                     android:layout_marginTop="1dp"
                     android:layout_toRightOf="@id/user_name"
                     android:background="@android:color/transparent"
-                    android:hint="100"
+                    android:hint="请输入原密码"
                     android:textSize="16sp" />
             </RelativeLayout>
 
@@ -119,7 +119,7 @@
                     android:textSize="16sp" />
 
                 <EditText
-                    android:id="@+id/usernewpwd"
+                    android:id="@+id/new_password"
                     android:layout_width="fill_parent"
                     android:layout_height="40dp"
                     android:layout_marginLeft="20dp"
@@ -153,7 +153,7 @@
                     android:textSize="16sp" />
 
                 <EditText
-                    android:id="@+id/userrealname"
+                    android:id="@+id/submit_password"
                     android:layout_width="fill_parent"
                     android:layout_height="40dp"
                     android:layout_marginLeft="20dp"
@@ -170,7 +170,7 @@
                 android:background="#808A87" />
 
             <Button
-                android:id="@+id/send"
+                android:id="@+id/change_password"
                 android:layout_width="fill_parent"
                 android:layout_height="35dp"
                 android:layout_marginLeft="5dp"
