--- a/app/src/main/res/layout/activity_login_first.xml
+++ b/app/src/main/res/layout/activity_login_first.xml
@@ -46,8 +46,8 @@
             android:id="@+id/relativelayout2"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="15.0px"
-            android:layout_marginRight="15.0px"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
             android:layout_marginTop="62.0px"
             android:layout_weight="0.00"
             android:background="#FFFFFF"
