--- a/app/src/main/res/layout/activity_login_first.xml
+++ b/app/src/main/res/layout/activity_login_first.xml
@@ -73,11 +73,11 @@
                 android:layout_marginTop="5.0dip"
                 android:layout_toRightOf="@+id/faceImg"
                 android:background="#FAEBD7"
-                android:hint="@string/username_hint"
+                android:text="20111308011"
                 android:paddingLeft="45.0sp"
                 android:saveEnabled="true"
                 android:singleLine="true"
-                android:textColor="#ff3f3f3f" />
+                android:textColor="@color/black" />
 
             <TextView
                 android:id="@+id/textview01"
@@ -102,9 +102,10 @@
                 android:layout_below="@+id/login_edit_account"
                 android:layout_marginRight="1.0dip"
                 android:background="#FAEBD7"
-                android:hint="@string/password_hint"
+                android:text="Aa11"
                 android:paddingLeft="45.0sp"
                 android:password="true"
+                android:textColor="@color/black"
                 android:saveEnabled="true"
                 android:singleLine="true" />
 
@@ -132,6 +133,7 @@
                 android:text="@string/opt_remember"
                 android:textColor="#ff222222"
                 android:textSize="16.0sp" />
+
             <ProgressBar
                 android:id="@+id/login_progress"
                 android:layout_centerInParent="true"
@@ -141,6 +143,7 @@
                 android:layout_height="30dp"
                 android:visibility="gone"
                 android:layout_gravity="center_horizontal" />
+
             <Button
                 android:id="@+id/login_btn_login"
                 android:layout_width="90.0dp"
