--- a/app/src/main/res/layout/fragment_advice.xml
+++ b/app/src/main/res/layout/fragment_advice.xml
@@ -1,12 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="#DCDCDC"
     android:orientation="vertical">
 
+    <ProgressBar
+        android:id="@+id/advice_progressbar"
+        android:visibility="gone"
+        android:layout_width="fill_parent"
+        android:layout_height="40dp" />
+
 
     <LinearLayout
+        android:id="@+id/advice_list"
+        android:visibility="gone"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:orientation="vertical">
@@ -31,4 +39,6 @@
         </cn.edu.sjzc.student.layout.PullToRefreshLayout>
     </LinearLayout>
 
-</LinearLayout>
+
+
+</RelativeLayout>
