--- a/app/src/main/res/layout/fragment_findteacher.xml
+++ b/app/src/main/res/layout/fragment_findteacher.xml
@@ -30,6 +30,22 @@
                 android:text="查找教师"
                 android:textColor="#ffffff"
                 android:textSize="14sp" />
+
+            <FrameLayout
+                android:id="@+id/frameLayout2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="7dp"
+                android:layout_weight="0">
+
+                <ProgressBar
+                    android:id="@+id/findteacher_progressbar"
+                    android:layout_width="30dp"
+                    android:layout_gravity="right"
+                    android:layout_height="30dp"
+                    android:visibility="gone" />
+            </FrameLayout>
         </RelativeLayout>
     </LinearLayout>
 
