--- a/app/src/main/res/layout/activity_advice_teacher.xml
+++ b/app/src/main/res/layout/activity_advice_teacher.xml
@@ -137,19 +137,23 @@
                 <EditText
                     android:id="@+id/advice_teacher_evaluation"
                     android:layout_width="fill_parent"
-                    android:layout_height="fill_parent"
+                    android:layout_height="40dp"
                     android:layout_marginLeft="20dp"
+                    android:layout_marginTop="1dp"
                     android:layout_toRightOf="@id/us_email"
-                    android:gravity="center_vertical"
-                    android:paddingTop="8dp"
                     android:background="@android:color/transparent"
+                    android:gravity="center"
                     android:hint="请输入要给老师发送的短信内容"
                     android:textSize="16sp" />
             </RelativeLayout>
 
-
+            <View
+                android:layout_width="fill_parent"
+                android:layout_height="1px"
+                android:background="#808A87" />
         </LinearLayout>
     </ScrollView>
+
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="50dp"
