--- a/app/src/main/res/layout/activity_login_first.xml
+++ b/app/src/main/res/layout/activity_login_first.xml
@@ -3,6 +3,7 @@
     android:id="@+id/loginRoot"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:background="@drawable/start"
     android:orientation="vertical">
 
     <LinearLayout
@@ -37,15 +38,14 @@
     <LinearLayout
         android:id="@+id/linear1"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="80dp"
         android:layout_weight="1"
-        android:background="#C0C0C0"
         android:orientation="vertical">
 
         <RelativeLayout
             android:id="@+id/relativelayout2"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="180dp"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
             android:layout_marginTop="62.0px"
