--- a/app/src/main/res/layout/activity_per_changeperinfo.xml
+++ b/app/src/main/res/layout/activity_per_changeperinfo.xml
@@ -46,6 +46,22 @@
                 android:text="@string/per_title_changeperinfo"
                 android:textColor="#ffffff"
                 android:textSize="16sp" />
+
+            <FrameLayout
+                android:id="@+id/frameLayout3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="7dp"
+                android:layout_weight="0">
+
+                <ProgressBar
+                    android:id="@+id/change_person_progressbar"
+                    android:layout_width="30dp"
+                    android:layout_gravity="right"
+                    android:layout_height="30dp"
+                    android:visibility="gone" />
+            </FrameLayout>
         </RelativeLayout>
     </LinearLayout>
 
@@ -85,7 +101,7 @@
                     android:textSize="16sp" />
 
                 <EditText
-                    android:id="@+id/username"
+                    android:id="@+id/change_email"
                     android:layout_width="fill_parent"
                     android:layout_height="40dp"
                     android:layout_marginLeft="20dp"
@@ -119,7 +135,7 @@
                     android:textSize="16sp" />
 
                 <EditText
-                    android:id="@+id/usernewpwd"
+                    android:id="@+id/change_tel"
                     android:layout_width="fill_parent"
                     android:layout_height="40dp"
                     android:layout_marginLeft="20dp"
@@ -153,7 +169,7 @@
                     android:textSize="16sp" />
 
                 <EditText
-                    android:id="@+id/userrealname"
+                    android:id="@+id/change_address"
                     android:layout_width="fill_parent"
                     android:layout_height="40dp"
                     android:layout_marginLeft="20dp"
