--- a/app/src/main/res/layout/fragment_evaluation.xml
+++ b/app/src/main/res/layout/fragment_evaluation.xml
@@ -75,7 +75,7 @@
                     android:layout_toRightOf="@id/eva_evaluation_img"
                     android:background="@drawable/home_linear_selector"
                     android:gravity="center_vertical"
-                    android:text="我的得分统计"
+                    android:text="我的评价记录"
                     android:textColor="#000000"
                     android:textSize="16sp" />
             </LinearLayout>
