--- a/app/src/main/res/layout/fragment_evaluation.xml
+++ b/app/src/main/res/layout/fragment_evaluation.xml
@@ -93,11 +93,13 @@
             <View
                 android:layout_width="fill_parent"
                 android:layout_height="1px"
+                android:visibility="gone"
                 android:background="#808A87" />
 
             <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="50dp"
+                android:visibility="gone"
                 android:layout_gravity="center_horizontal"
                 android:background="#FFFFFF"
                 android:orientation="horizontal">
@@ -128,6 +130,7 @@
             <View
                 android:layout_width="fill_parent"
                 android:layout_height="1px"
+                android:visibility="gone"
                 android:background="#808A87" />
 
             <LinearLayout
@@ -138,11 +141,13 @@
             <View
                 android:layout_width="fill_parent"
                 android:layout_height="1px"
+                android:visibility="gone"
                 android:background="#808A87" />
 
             <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="50dp"
+                android:visibility="gone"
                 android:layout_gravity="center_horizontal"
                 android:background="#FFFFFF"
                 android:orientation="horizontal">
