--- a/app/src/main/res/layout/dialog_home_new_back.xml
+++ b/app/src/main/res/layout/dialog_home_new_back.xml
@@ -37,7 +37,7 @@
 
         <LinearLayout
             android:layout_width="fill_parent"
-            android:layout_height="1dip"
+            android:layout_height="1px"
             android:background="#D1D1D1" />
 
         <LinearLayout
@@ -54,7 +54,7 @@
                 android:text="@string/cancel" />
 
             <LinearLayout
-                android:layout_width="1dp"
+                android:layout_width="1px"
                 android:layout_height="fill_parent"
                 android:background="#D1D1D1" />
 
