--- a/app/src/main/res/layout/fragment_evaluation.xml
+++ b/app/src/main/res/layout/fragment_evaluation.xml
@@ -93,13 +93,11 @@
             <View
                 android:layout_width="fill_parent"
                 android:layout_height="1px"
-                android:visibility="gone"
                 android:background="#808A87" />
 
             <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="50dp"
-                android:visibility="gone"
                 android:layout_gravity="center_horizontal"
                 android:background="#FFFFFF"
                 android:orientation="horizontal">
@@ -121,7 +119,7 @@
                     android:layout_toRightOf="@id/eva_score_img"
                     android:background="@drawable/home_linear_selector"
                     android:gravity="center_vertical"
-                    android:text="我的得分"
+                    android:text="我的课程"
                     android:textColor="#000000"
                     android:textSize="16sp" />
             </LinearLayout>
@@ -177,6 +175,7 @@
             <View
                 android:layout_width="fill_parent"
                 android:layout_height="1px"
+                android:visibility="gone"
                 android:background="#808A87" />
 
 
