--- a/app/src/main/res/layout/fragment_personalcenter.xml
+++ b/app/src/main/res/layout/fragment_personalcenter.xml
@@ -199,6 +199,7 @@
                 <LinearLayout
                     android:layout_width="fill_parent"
                     android:layout_height="45dp"
+                    android:visibility="gone"
                     android:layout_gravity="center_horizontal"
                     android:orientation="horizontal">
 
@@ -227,6 +228,7 @@
                 <View
                     android:layout_width="fill_parent"
                     android:layout_height="1px"
+                    android:visibility="gone"
                     android:layout_marginLeft="0dp"
                     android:background="#808A87" />
 
