2015/05/31，基本完成，配置文件需要修改

--- a/app/src/main/res/layout/fragment_personalcenter.xml
+++ b/app/src/main/res/layout/fragment_personalcenter.xml
@@ -66,8 +66,8 @@
                         android:layout_height="80dp"
                         android:text="用户姓名"
                         android:textSize="15sp"
-                        android:textColor="@color/black"
-                        android:background="@drawable/user_img" />
+                        android:textColor="@color/blue"
+                        android:background="@drawable/icon" />
                 </RelativeLayout>
             </LinearLayout>
 
