--- a/app/src/main/res/layout/item_listview_advice.xml
+++ b/app/src/main/res/layout/item_listview_advice.xml
@@ -15,6 +15,7 @@
             android:id="@+id/search_img"
             android:layout_width="45.0dip"
             android:layout_height="45.0dip"
+            android:visibility="gone"
             android:layout_gravity="center_vertical"
             android:src="@drawable/ic_launcher" />
 
