--- a/app/src/main/res/layout/fragment_findteacher.xml
+++ b/app/src/main/res/layout/fragment_findteacher.xml
@@ -28,6 +28,7 @@
                 android:paddingBottom="10dp"
                 android:paddingTop="10dp"
                 android:text="查找教师"
+
                 android:textColor="#ffffff"
                 android:textSize="14sp" />
 
@@ -61,6 +62,7 @@
             android:layout_height="30dp"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
+            android:visibility="gone"
             android:background="@drawable/login_selector"
             android:text="查找" />
 
